# plainconf

./: .gitignore  LICENSE  README.md  plainconf.py  pyproject.toml
.github/workflows/: plainconf-release.yml
plainconf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sober.egg-info/: PKG-INFO  SOURCES.txt
tests/: .test-secrets.toml  test-settings.toml  test.py
