[project]
name = "plainconf"
version = "0.1.9"
description = "Minimal configuration handling supporting hashicorp vault."
authors = [{name="Caspar David Dzikus", email="caspar@kodekitchen.com"}]
classifiers = ["Development Status :: 2 - Pre-Alpha"]
readme = "README.md"
dependencies = ["python-dotenv", "hvac"]
keywords = ["configuration", "vault"]

[project.urls]
Homepage = "https://github.com/kodekitchen/plainconf"
Bugtracker = "https://github.com/kodekitchen/plainconf/issues"
